# comm_health

./: .env.example  .gitignore  DECISIONS.md  Dockerfile  NOTES.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: insights.py  narrative.py
app/clients/: reddit.py
app/config/: settings.py
app/db/: session.py
app/llm/: base.py  factory.py  openai_provider.py
app/models/: reddit.py
app/repositories/: comment_repository.py  fetch_repository.py  post_repository.py
app/schemas/: insights.py  narrative.py
app/services/: ingestion_service.py  metrics_service.py  narrative_service.py
evals/: conftest.py  test_narrative.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  App.module.css  index.css
frontend/src/components/: AlertCard.jsx  AlertCard.module.css  ContributorTable.jsx  ContributorTable.module.css  HealthDashboard.jsx  HealthDashboard.module.css  NarrativePanel.jsx  NarrativePanel.module.css  SearchForm.jsx  SearchForm.module.css
migrations/: env.py
migrations/versions/: 001_initial_schema.py
tests/: test_alerts.py  test_metrics.py  test_narrative.py
